reduce to the bare minimum

--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,15 @@ repositories {
 }
 
 dependencies {
-    implementation "org.codehaus.groovy:groovy-all:2.5.4"
-    implementation "de.gesellix:docker-client:2019-02-16T22-09-06"
+    implementation "org.codehaus.groovy:groovy:2.5.4"
+
+    implementation "com.kohlschutter.junixsocket:junixsocket-core:2.1.2"
+    implementation "com.kohlschutter.junixsocket:junixsocket-common:2.1.2"
+
+    // work around https://github.com/kohlschutter/junixsocket/issues/59
+    implementation("com.kohlschutter.junixsocket:junixsocket-native-common:2.1.1") {
+        force = true
+    }
 
     testImplementation "org.spockframework:spock-core:1.2-groovy-2.5"
     testImplementation gradleTestKit()
